Added the writers first and last name to the book object
